--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,6 +5,11 @@
     font-style: normal;
 }
 
+html {
+    font-size: 15px;
+}
+
 body {
     font-family: 'Chivo', sans-serif;
+    font-weight: 400;
 }
