--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,15 +1,14 @@
 @font-face {
-    font-family: Chivo;
-    src: url(../fonts/Chivo-VariableFont_wght.ttf) format(truetype-variations);
+    font-family: 'Chivo';
+    src: url(../fonts/Chivo-VariableFont_wght.ttf) format('truetype-variations');
     font-weight: 100 900;
-    font-style: normal;
 }
 
 html {
-    font-size: 15px;
+    font-size: 18px;
 }
 
 body {
-    font-family: 'Chivo', sans-serif;
+    font-family: 'Chivo';
     font-weight: 400;
 }
