--- a/templates/index.html
+++ b/templates/index.html
@@ -4,5 +4,10 @@
 {% block styles %}{% endblock %}
 
 {% block content %}
-<p>Text</p>
+<p>Body</p>
+
+{% for i in range(6, 0, -1) %}    
+    <h{{i}}>Heading {{i}}</h{{i}}>
+{% endfor %}
+
 {% endblock %}
