--- a/static/css/base.css
+++ b/static/css/base.css
@@ -12,3 +12,12 @@ body {
     font-family: 'Chivo';
     font-weight: 400;
 }
+
+@media (min-width: 550px) {
+    #navbar {
+        height: 70px;
+        width: 100vw;
+        filter: drop-shadow(0px 0px 5px rgb(228, 228, 228));
+        background-color: white;
+    }
+}
