--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
         <script src="{{url_for('static', filename='jquery/jquery-3.3.1.js')}}"></script>
     </head>
     <body>
+        {% include 'navbar.html' %}
         <div class="container">
             {% block content %}{% endblock %}
         </div>
