--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,12 +1,14 @@
 <div id='navbar'>
-    <div class="container">
-        <div style='display: flex; justify-content: space-between; align-content: center;''>
-            <!-- Logo image -->
+    <div class='container' style='height: 100%;'>
+        <div style='display: flex; justify-content: space-between; align-items: center; height: 100%;'>
                 <a style="height: 30px; width: 30px;" href="{{url_for('index')}}">
                     <img class="u-full-width" src="{{url_for('static', filename='images/favicon.png')}}">
                 </a>
-            <div style='display: flex; justify-content: flex-end; align-content: center; column-gap: 10px;'>
-                <!-- Nav items -->
+            <div style='display: flex; justify-content: flex-end; align-content: center; column-gap: 20px;'>
+                <a href='#'>Home</a>
+                <a href='#'>Research</a>
+                <a href='#'>Design</a>
+                <a href='#'>About</a>
             </div>
         </div>
     </div>
