--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,13 +4,18 @@
     font-weight: 100 900;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 html {
-    font-size: 18px;
+    font-size: 10px;
 }
 
 body {
     font-family: 'Chivo';
-    font-weight: 400;
+    font-weight: 300;
 }
 
 @media (min-width: 550px) {
@@ -19,5 +24,6 @@ body {
         width: 100vw;
         filter: drop-shadow(0px 0px 5px rgb(228, 228, 228));
         background-color: white;
+        font-weight: 300;
     }
 }
