--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="{{url_for('static', filename='css/skeleton.css')}}">
         
         <link rel="stylesheet" href="{{url_for('static', filename='css/base.css')}}">
+        <link rel="stylesheet" href="{{url_for('static', filename='css/navbar.css')}}">
         {% block styles %}{% endblock %}
       
         <!-- JQuery -->
