--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,10 +1,34 @@
-<div id='navbar'>
-    <div class='container' style='height: 100%;'>
-        <div style='display: flex; justify-content: space-between; align-items: center; height: 100%;'>
+
+<script>
+    $(document).ready(function() {
+        $('#nav-ham').click(function() {
+            var navlinks = $('#nav-links-wrap')
+            if (navlinks.hasClass('nav-hide')) {
+                $('#nav-links-wrap').removeClass('nav-hide');
+                $('#nav-ham img').attr('src', '{{url_for('static', filename='images/ham_close.png')}}');                
+            }
+            else {
+                $('#nav-links-wrap').addClass('nav-hide');
+                $('#nav-ham img').attr('src', '{{url_for('static', filename='images/ham_open.png')}}');                
+            };
+        });          
+    });
+</script>
+
+<div id='nav-frame'>
+    <div class='container'>
+        <div id='navbar'>
+            <!-- Logo and hamburger -->
+            <div style="display: flex; justify-content: space-between; width: 100%;">
                 <a style="height: 30px; width: 30px;" href="{{url_for('index')}}">
                     <img class="u-full-width" src="{{url_for('static', filename='images/favicon.png')}}">
                 </a>
-            <div style='display: flex; justify-content: flex-end; align-content: center; column-gap: 20px;'>
+                <div id='nav-ham' style="height: 30px; width: 30px;">
+                    <img class="u-full-width" src="{{url_for('static', filename='images/ham_open.png')}}">
+                </div>
+            </div>
+            <!-- Nav links -->
+            <div id='nav-links-wrap' class='nav-hide'>
                 <a href='#'>Home</a>
                 <a href='#'>Research</a>
                 <a href='#'>Design</a>
