--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -3,6 +3,7 @@
     filter: drop-shadow(0px 0px 5px rgb(228, 228, 228));
     background-color: white;
     font-weight: 300;
+    /* transition: height 0.2s ease-out; */
     
     height: fit-content;
     padding-top: 20px;
