--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,19 +1,19 @@
 @font-face {
-    font-family: 'Chivo';
-    src: url(../fonts/Chivo-VariableFont_wght.ttf) format('truetype-variations');
-    font-weight: 100 900;
+  font-family: "Chivo";
+  src: url(../fonts/Chivo-VariableFont_wght.ttf) format("truetype-variations");
+  font-weight: 100 900;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 html {
-    font-size: 10px;
+  font-size: 10px;
 }
 
 body {
-    font-family: 'Chivo';
-    font-weight: 300;
+  font-family: "Chivo";
+  font-weight: 300;
 }
