--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -1,69 +1,70 @@
 /* Responsiveness */
 .navbar {
-    width: 100vw; 
-    filter: drop-shadow(0px 0px 5px rgb(228, 228, 228)); 
-    background-color: white; 
-    font-weight: 300;
-    z-index: 1;
-    transition: top 0.2s ease-in-out;
+  width: 100vw;
+  filter: drop-shadow(0px 0px 5px rgb(228, 228, 228));
+  background-color: white;
+  font-weight: 300;
+  z-index: 1;
+  transition: top 0.2s ease-in-out;
 }
 
 .navbar.desktop {
-    display: block;
-    padding: 15px 0px;
-    position: fixed;
-    top: 0;
+  display: block;
+  padding: 15px 0px;
+  position: fixed;
+  top: 0;
 }
 
 .navbar.mobile {
-    display: none;
-    position: fixed;
-    top: 0;
+  display: none;
+  position: fixed;
+  top: 0;
 }
 
 .nav-buffer {
-    margin-bottom: 60px;
-    position: static;
-    background-color: none;
+  margin-bottom: 60px;
+  position: static;
+  background-color: none;
 }
 
 @media (max-width: 549px) {
-    .navbar.desktop {
-        display: none;
-    }
+  .navbar.desktop {
+    display: none;
+  }
 
-    .navbar.mobile {
-        display: block;
-    }
+  .navbar.mobile {
+    display: block;
+  }
 
-    .nav-buffer {
-        margin-bottom: 50px;
-    }
+  .nav-buffer {
+    margin-bottom: 50px;
+  }
 }
 
 /* Mobile */
-#nm-wrap div, #nm-wrap a {
-    flex-shrink: 0;
+#nm-wrap div,
+#nm-wrap a {
+  flex-shrink: 0;
 }
 
 #nm-wrap.closed {
-    height: 50px;
+  height: 50px;
 }
 
 #nm-wrap.opened {
-    height: 202.5px;
+  height: 202.5px;
 }
 
 .nm-item {
-    display: flex; 
-    height: 35px;
-    width: 100%;
-    flex-direction: row; 
-    align-items: center;
+  display: flex;
+  height: 35px;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
 }
 
 .nm-img {
-    display: inherit; 
-    height: 25px; 
-    width: 25px;
+  display: inherit;
+  height: 25px;
+  width: 25px;
 }
