--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -31,6 +31,7 @@
           }
           // Mobile
           else {
+              // Only animate if hamburger menu is retracted
               if ($('#nm-wrap').hasClass('closed')) {
                   // Scrolling down
                   if (newScroll > oldScroll) {
