--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,140 +1,108 @@
 <script>
-  $(document).ready(function() {
-      // Hamburger mobile menu
-      $('#hamburger').click(function() {
-          var nm_wrap = $('#nm-wrap').hasClass('closed');
-          if (nm_wrap) {
-              $('#nm-wrap').addClass('opened');
-              $('#nm-wrap').removeClass('closed');
-              $('#hamburger img').attr('src', '{{url_for('static', filename='images/ham_opened.png')}}');
-          }
-          else if (!nm_wrap) {
-              $('#nm-wrap').addClass('closed');
-              $('#nm-wrap').removeClass('opened');
-              $('#hamburger img').attr('src', '{{url_for('static', filename='images/ham_closed.png')}}');
-          }
-      })
-      // Scrolling hiding
-      oldScroll = $(window).scrollTop();
-      $(window).on('scroll', () => {
-          var newScroll = $(window).scrollTop();
-          // Desktop
-          if ($(window).width() >= 550) {
-              // Scrolling down
-              if (newScroll > oldScroll) {
-                  $('.navbar.desktop').css('top', -60);
-              }
-              // Scrolling up
-              else if (newScroll < oldScroll) {
-                  $('.navbar.desktop').css('top', 0);
-              }
-          }
-          // Mobile
-          else {
-              // Only animate if hamburger menu is retracted
-              if ($('#nm-wrap').hasClass('closed')) {
-                  // Scrolling down
-                  if (newScroll > oldScroll) {
-                      $('.navbar.mobile').css('top', -50);
-                  }
-                  // Scrolling up
-                  else if (newScroll < oldScroll) {
-                      $('.navbar.mobile').css('top', 0);
-                  }
-              }
-          }
-          oldScroll = $(window).scrollTop();
-      })
-  })
+	$(document).ready(function () {
+    // Open on #hamburger click
+    $("#hamburger").click(function(event){
+      if ($("#popout").hasClass('hide')) {
+        $("#popout").removeClass("hide");
+        event.stopPropagation();
+      }
+    })
+    // Close on external click
+    $(document).click(function(event){
+      // .closest function returns array with jQuery object of closest #popout
+      var popoutNotClicked = ($(event.target).closest("#popout").length == 0);
+      var popoutOpen = (!$("#popout").hasClass("hide"));
+      if (popoutNotClicked && popoutOpen) {
+        $("#popout").addClass("hide");
+      }
+    })
+    // Hide on scroll-down, show on scroll-up
+    var oldScroll = $(window).scrollTop();
+    $(window).on('scroll', function() {
+      var newScroll = $(window).scrollTop();
+      // Scrolling down - hide
+      if (newScroll > oldScroll) {
+        // Desktop
+        if ($(window).width() >= 550) {
+          $("#desktop-scroll").css('top', ($("#desktop-scroll").height()*(-1)));
+        }
+        // Mobile
+        else {
+          $("#mobile-scroll").css('top', ($("#mobile-scroll").height()*(-1)));
+        }
+      }
+      // Scrolling up - show
+      else {
+        $("#desktop-scroll, #mobile-scroll").css('top', 0);
+      }
+     oldScroll = newScroll;
+    })
+	})
 </script>
-
-<!-- Buffer for nav space -->
-<div class="nav-buffer"></div>
-
-<!-- Desktop navbar (vw >= 550px) -->
-<div class="navbar desktop">
-  <div class="container">
-    <!-- Flexbox w/ logo and nav items -->
-    <div
-      style="
-        display: flex;
-        justify-content: space-between;
-        flex-direction: row;
-        align-items: center;
-        width: 100%;
-      "
-    >
-      <!-- Logo -->
-      <a
-        style="display: inherit; height: 30px; width: 30px"
-        href="{{url_for('index')}}"
-      >
-        <img
-          class="u-full-width"
-          src="{{url_for('static', filename='images/favicon.png')}}"
-        />
-      </a>
-      <!-- Nav items -->
-      <div style="display: flex; justify-content: flex-end; column-gap: 15px">
-        <a href="#">Home</a>
-        <a href="#">Research</a>
-        <a href="#">Design</a>
-        <a href="#">About</a>
-      </div>
-    </div>
-  </div>
+<!-- Desktop -->
+<!-- 100vw for appropriate border position -->
+<div class="container-fluid desktop" id="desktop-scroll">
+	<nav class="container desktop">
+		<ul>
+			<li>
+				<img
+					src="{{url_for('static', filename='images/favicon.png')}}"
+				/>
+			</li>
+		</ul>
+		<ul>
+			<li><a href="#" class="secondary">About</a></li>
+			<li><a href="#" class="secondary">Research</a></li>
+			<li><a href="#" class="secondary">Design</a></li>
+			<li><a href="#" class="secondary">Personal</a></li>
+		</ul>
+	</nav>
 </div>
-
-<!-- Mobile navbar (vw < 550px) -->
-<!-- Height manually calculated to allow for open / close animation 
-    Nav logo + hamburger = 50px; Each entry = 35px; Bottom margin = 15px
-    For x4 entries, closed is 50px an opened is 202.5px
--->
-<div class="navbar mobile">
-  <div class="container">
-    <!-- Nav Mobile wrapper flexbox / height adjusted for animated hamburger menu -->
-    <div
-      id="nm-wrap"
-      class="closed"
-      style="
-        display: flex;
-        justify-content: flex-start;
-        flex-direction: column;
-        align-items: flex-start;
-        width: 100%;
-        overflow-y: hidden;
-        transition: height 0.2s ease-out;
-      "
-    >
-      <!-- Flexbox with logo and hamburger / height = 50px -->
-      <div
-        style="
-          display: flex;
-          justify-content: space-between;
-          flex-direction: row;
-          align-items: center;
-          width: 100%;
-          height: 50px;
-        "
-      >
-        <a class="nm-img" href="{{url_for('index')}}">
-          <img
-            class="u-full-width"
-            src="{{url_for('static', filename='images/favicon.png')}}"
-          />
-        </a>
-        <div id="hamburger" class="nm-img">
-          <img
-            class="u-full-width"
-            src="{{url_for('static', filename='images/ham_closed.png')}}"
-          />
-        </div>
-      </div>
-      <!-- Nav items -->
-      <a class="nm-item" href="#">Home</a>
-      <a class="nm-item" href="#">Research</a>
-      <a class="nm-item" href="#">Design</a>
-      <a class="nm-item" href="#">About</a>
-    </div>
-  </div>
+<!-- Mobile -->
+<nav class="container mobile" id="mobile-scroll">
+	<ul>
+		<li>
+        <img src="{{url_for('static', filename='images/favicon.png')}}"
+			/></a>
+		</li>
+	</ul>
+	<ul>
+		<li><a id="hamburger" href=# class="secondary">
+      <i class="fa-solid fa-bars fa-lg" style="color: var(--secondary);"></i
+			></a>
+		</li>
+	</ul>
+</nav>
+<!-- Mobile Popout -->
+<div id="popout" class="mobile hide">
+	<nav class="container-fluid">
+		<ul>
+			<li>
+				<img
+					src="{{url_for('static', filename='images/favicon.png')}}"
+				/>
+			</li>
+		</ul>
+	</nav>
+	<nav class="container-fluid">
+		<aside>
+			<nav>
+				<ul>
+					<li><a href="#" class="secondary">About</a></li>
+					<li><a href="#" class="secondary">Research</a></li>
+					<li><a href="#" class="secondary">Design</a></li>
+					<li><a href="#" class="secondary">Personal</a></li>
+				</ul>
+			</nav>
+		</aside>
+	</nav>
 </div>
+<!-- Device agnostic offset for fixed navbar -->
+<nav class="container offset">
+  <ul>
+    <li>
+      <div class="fake-img"></div>
+    </li>
+    <li><a href="#">fake text</a></li>
+  </ul>
+</nav>
