--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 		<!-- CSS -->
 		<link
 			rel="stylesheet"
-			href="{{url_for('static', filename='css/pico.css')}}"
+			href="{{url_for('static', filename='css/pico-bootstrap-grid.css')}}"
 		/>
 		<link
 			rel="stylesheet"
