--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,9 @@ styles %}<link
 				/>
 				<p>
 					<small
-						>Caption: An aspiring researcher's amateur self-portrait
-						in a local forest</small
-					>
+						>Caption: An aspiring researcher's amateur self-portrait in a local
+						forest
+					</small>
 				</p>
 			</div>
 		</div>
@@ -32,18 +32,17 @@ styles %}<link
 				<a href="https://prohealth.luddy.indiana.edu/"
 					>Proactive Health Informatics</a
 				>, and an Informatics undergraduate student at
-				<a href="https://luddy.indiana.edu/index.html">Luddy SICE</a>,
-				Indiana University Bloomington.
+				<a href="https://luddy.indiana.edu/index.html">Luddy SICE</a>, Indiana
+				University Bloomington.
 			</p>
 			<p>
-				Prospective PhD applicant for HCI-centric programs which begin
-				Fall 2024.
+				Prospective PhD applicant for HCI-centric programs which begin Fall
+				2024.
 			</p>
 			<div class="contact">
 				<a href="mailto: clefevr@iu.edu" class="contrast"
 					><i class="fa-solid fa-envelope fa-lg"></i
 				></a>
-
 				<a
 					href="https://linkedin.com/in/colin-lefevre/"
 					target="_blank"
@@ -51,7 +50,6 @@ styles %}<link
 					class="contrast"
 					><i class="fa-brands fa-linkedin-in fa-lg"></i
 				></a>
-
 				<a
 					href="https://twitter.com/col_lefevre"
 					target="_blank"
@@ -59,7 +57,6 @@ styles %}<link
 					class="contrast"
 					><i class="fa-brands fa-x-twitter fa-lg"></i
 				></a>
-
 				<a
 					href="https://github.com/col-lefevre"
 					target="_blank"
@@ -67,7 +64,6 @@ styles %}<link
 					class="contrast"
 					><i class="fa-brands fa-github fa-lg"></i
 				></a>
-
 				<a
 					href="https://orcid.org/0000-0001-6453-7251"
 					target="_blank"
